<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings" android:visible="true"/>
    <item
        android:id="@+id/menu_calendar"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/menu_calendar"
        android:visible="true" android:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_refresh"
        android:enabled="true"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/menu_refresh"
        android:visible="true" android:showAsAction="always">
    </item>

</menu>